--- a/index.html
+++ b/index.html
@@ -12,10 +12,18 @@
 
 <body>
   <header class="mb-5">
-    <div class="container mt-5 d-flex justify-content-end ">
-      <div class="btn-group">
-        <button type="button" class="btn btn-secondary btn-sm" data-bs-theme-value="dark">Dark</button>
-        <button type="button" class="btn btn-light btn-sm" data-bs-theme-value="light">light</button>
+    <div class="container mt-5">
+      <div class="d-flex justify-content-end ">
+        <div class="btn-group">
+          <button type="button" class="btn btn-secondary btn-sm" data-bs-theme-value="dark">Dark</button>
+          <button type="button" class="btn btn-light btn-sm" data-bs-theme-value="light">light</button>
+        </div>
+      </div>
+      <h1>Users</h1>
+      <!-- Search box and nav bar -->
+      <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-8"></div>
       </div>
     </div>
   </header>
